[package]
name = "orly-server"
version = "0.0.10"
authors = ["Longor1996 <lalongok@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]

# cdrs = "2.3.1"
# elasticsearch = "7.6.1-alpha.1"

rusqlite = {version = "0.24.0", features = ["bundled"]}

dotenv = "0.15.0"
tokio = { version = "0.2", features = ["macros", "fs", "sync", "time"] }
futures = "0.3.5"
warp = "0.2.5"
dashmap = "3.11.10"

lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
comrak = {version = "0.8.2", default-features = false}

[dev-dependencies]
walkdir = "2.3.1"

[build-dependencies]
built = {version = "0.4.3", features = ["git2", "semver"]}
dircpy = "0.3.4"
